--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -76,13 +76,12 @@ library
     , Glob
     , haddock-library              >=1.8      && <1.12
     , hashable
-    , hie-bios                     ==0.12.1
+    , hie-bios                     ==0.13.1
     , hie-compat                   ^>=0.3.0.0
     , hiedb                        >=0.4.4    && <0.4.5
     , hls-graph                    ==2.4.0.0
     , hls-plugin-api               ==2.4.0.0
-    , implicit-hie                 <0.1.3
-    , implicit-hie-cradle          ^>=0.3.0.5 || ^>=0.5
+    , implicit-hie                 >= 0.1.4.0 && < 0.1.5
     , lens
     , list-t
     , lsp                          ^>=2.3.0.0
@@ -111,10 +110,6 @@ library
     , unordered-containers         >=0.2.10.0
     , vector
 
-  -- implicit-hie 0.1.3.0 introduced an unexpected behavioral change.
-  -- https://github.com/Avi-D-coder/implicit-hie/issues/50
-  -- to make sure ghcide behaves in a desirable way, we put implicit-hie
-  -- fake dependency here.
   if os(windows)
     build-depends: Win32
 
@@ -165,6 +160,7 @@ library
     Development.IDE.Core.UseStale
     Development.IDE.GHC.Compat
     Development.IDE.GHC.Compat.Core
+    Development.IDE.GHC.Compat.CmdLine
     Development.IDE.GHC.Compat.Env
     Development.IDE.GHC.Compat.Iface
     Development.IDE.GHC.Compat.Logger
@@ -197,6 +193,7 @@ library
     Development.IDE.Plugin.TypeLenses
     Development.IDE.Session
     Development.IDE.Session.Diagnostics
+    Development.IDE.Session.Implicit
     Development.IDE.Spans.AtPoint
     Development.IDE.Spans.Common
     Development.IDE.Spans.Documentation
