Change bios cradle with shell script to a direct cradle for portability to Windows

--- a/plugins/hls-retrie-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-retrie-plugin/test/testdata/hie.yaml
@@ -1,4 +1,11 @@
 cradle:
-  bios:
-    shell: |
-      find . -name "*.hs" > $HIE_BIOS_OUTPUT
+    direct:
+      arguments:
+        - Class.hs
+        - Identity.hs
+        - Imported.hs
+        - Nested.hs
+        - NestedLet.hs
+        - NestedNested.hs
+        - NestedWhere.hs
+        - Operator.hs
