--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -15,6 +15,8 @@ build-type:         Simple
 extra-source-files:
   LICENSE
   test/testdata/**/*.hs
+  test/testdata/.ormolu
+  test/testdata/test.cabal
 
 source-repository head
     type:     git
@@ -49,3 +51,4 @@ test-suite tests
     , hls-ormolu-plugin
     , hls-test-utils     ^>=1.5
     , lsp-types
+    , ormolu
