--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,6 @@ jobs:
       matrix:
         ghc: [ "9.4.4"
              , "9.2.5"
-             , "9.2.4"
              , "9.0.2"
              , "8.10.7"
              ]
@@ -70,16 +69,6 @@ jobs:
             , "macOS-latest"
             , "windows-latest"
             ]
-        # don't build these versions
-        # they are broken for good reasons, e.g. compiler is bugged
-        # on that platform.
-        exclude:
-           # Exclude until https://github.com/haskell/actions/issues/129
-           # is resolved.
-           - os: windows-latest
-             ghc: '9.4.3' # Excluded because github action cannot install it
-           - os: windows-latest
-             ghc: '9.2.5'
         # Mark which GHC versions on which platform we want to test.
         include:
            # only test supported ghc major versions
@@ -98,10 +87,8 @@ jobs:
            - os: windows-latest
              ghc: '9.4.4'
              test: true
-           # Test on 9.2.4 until https://github.com/haskell/actions/issues/129
-           # is resolved. Then switch to 9.2.5
            - os: windows-latest
-             ghc: '9.2.4'
+             ghc: '9.2.5'
              test: true
            - os: windows-latest
              ghc: '9.0.2'
@@ -179,11 +166,11 @@ jobs:
         name: Test hls-pragmas-plugin
         run: cabal test hls-pragmas-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-pragmas-plugin --test-options="$TEST_OPTS"
 
-      - if: matrix.test && matrix.ghc != '9.4.2' && matrix.ghc != '9.4.3'
+      - if: matrix.test && matrix.ghc != '9.4.4'
         name: Test hls-eval-plugin
         run: cabal test hls-eval-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-eval-plugin --test-options="$TEST_OPTS"
 
-      - if: matrix.test && matrix.ghc != '9.2.4' && matrix.ghc != '9.2.5' && matrix.ghc != '9.4.2' && matrix.ghc != '9.4.3'
+      - if: matrix.test && matrix.ghc != '9.2.5' && matrix.ghc != '9.4.4'
         name: Test hls-haddock-comments-plugin
         run: cabal test hls-haddock-comments-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-haddock-comments-plugin --test-options="$TEST_OPTS"
 
@@ -203,7 +190,7 @@ jobs:
         name: Test hls-fourmolu-plugin
         run: cabal test hls-fourmolu-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-fourmolu-plugin --test-options="$TEST_OPTS"
 
-      - if: matrix.test && matrix.ghc != '9.2.4' && matrix.ghc != '9.2.5' && matrix.ghc != '9.4.2' && matrix.ghc != '9.4.3'
+      - if: matrix.test && matrix.ghc != '9.2.5' && matrix.ghc != '9.4.4'
         name: Test hls-tactics-plugin test suite
         run: cabal test hls-tactics-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-tactics-plugin --test-options="$TEST_OPTS"
 
@@ -227,7 +214,7 @@ jobs:
         name: Test hls-hlint-plugin test suite
         run: cabal test hls-hlint-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-hlint-plugin --test-options="$TEST_OPTS"
 
-      - if: matrix.test && matrix.ghc != '9.0.1' && matrix.ghc != '9.0.2' && matrix.ghc != '9.2.4' && matrix.ghc != '9.2.5' && matrix.ghc != '9.4.2' && matrix.ghc != '9.4.3'
+      - if: matrix.test && matrix.ghc != '9.0.2' && matrix.ghc != '9.2.5' && matrix.ghc != '9.4.4'
         name: Test hls-stan-plugin test suite
         run: cabal test hls-stan-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-stan-plugin --test-options="$TEST_OPTS"
 
