--- a/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
+++ b/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
@@ -61,10 +61,7 @@ library
     , unordered-containers
     , ghc-lib-parser
     , ghc-lib-parser-ex
-  if impl(ghc >= 9.2)
-    build-depends: apply-refact ^>= 0.11.0.0
-  else
-    build-depends: apply-refact ^>= 0.9.0.0
+    , apply-refact
 
   cpp-options:   -DHLINT_ON_GHC_LIB
   ghc-options:
