--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -21,6 +21,8 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  if impl(ghc >= 9.5)
+    buildable: False
   exposed-modules:  Ide.Plugin.Floskell
   hs-source-dirs:   src
   build-depends:
@@ -35,6 +37,8 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.5)
+    buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
