--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -23,6 +23,8 @@ source-repository head
   location: git://github.com/haskell/haskell-language-server.git
 
 library
+  if impl(ghc >= 9.5)
+    buildable: False
   exposed-modules:
       Ide.Plugin.Fourmolu
     , Ide.Plugin.Fourmolu.Shim
@@ -47,6 +49,8 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.5)
+    buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
