--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -23,6 +23,8 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  if impl(ghc >= 9.5)
+    buildable: False
   exposed-modules:  Ide.Plugin.Ormolu
   hs-source-dirs:   src
   build-depends:
@@ -40,6 +42,8 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.5)
+    buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
