--- a/plugins/hls-splice-plugin/hls-splice-plugin.cabal
+++ b/plugins/hls-splice-plugin/hls-splice-plugin.cabal
@@ -27,6 +27,8 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  if impl(ghc >= 9.5)
+    buildable: False
   exposed-modules:
     Ide.Plugin.Splice
     Ide.Plugin.Splice.Types
@@ -60,6 +62,8 @@ library
     TypeOperators
 
 test-suite tests
+  if impl(ghc >= 9.5)
+    buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
