--- a/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
+++ b/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
@@ -20,6 +20,8 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  if impl(ghc >= 9.5)
+    buildable: False
   exposed-modules:  Ide.Plugin.StylishHaskell
   hs-source-dirs:   src
   build-depends:
@@ -37,6 +39,8 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.5)
+    buildable: False
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
