--- a/cabal.project
+++ b/cabal.project
@@ -42,7 +42,41 @@ packages:
 -- See https://github.com/haskell/haskell-language-server/blob/master/.gitlab-ci.yml
 optional-packages: vendored/*/*.cabal
 
-tests: true
+tests: True
+
+-- mfsolve has duplicate instances in its test suite
+-- See: https://github.com/kuribas/mfsolve/issues/8
+package mfsolve
+  tests: False
+
+if impl(ghc >= 9.5)
+  source-repository-package
+    type:git
+    location: https://github.com/wz1000/HieDb
+    tag: 721bd0ce7392b8eff8d7643cf132a6448466fd52
+
+  source-repository-package
+    type:git
+    location: https://github.com/wz1000/retrie
+    tag: 3ad8ca0450ea4619bbc8007251582ffc828faa37
+
+  source-repository-package
+    type:git
+    location: https://github.com/haskell/hie-bios
+    tag: 8519812ad7501cab31347cd46ad1312b8413b8ad
+
+  source-repository-package
+    type:git
+    location: https://github.com/wz1000/ghc-exactprint/
+    tag: 58d88820399b66304f3bb18f0b2602c3a90d5bea
+
+-- Remove when fix for
+-- https://github.com/kazu-yamamoto/http2/issues/42
+-- is released on hackage
+source-repository-package
+  type:git
+  location: https://github.com/kazu-yamamoto/http2
+  tag: aa56ded3494dd4f0efb0bbcb5378879ce785a647
 
 package *
   ghc-options: -haddock
@@ -50,7 +84,22 @@ package *
 
 write-ghc-environment-files: never
 
-index-state: 2023-03-15T00:00:00Z
+if impl(ghc >= 9.5)
+  allow-newer:
+    -- ghc-9.6
+    template-haskell,
+    unordered-containers:template-haskell,
+    base,
+    ghc-prim,
+    ghc,
+    ghc-boot,
+    mtl,
+    transformers,
+    Cabal
+
+-- head.hackage doesn't like index-state
+if impl(ghc < 9.5)
+  index-state: 2023-03-15T00:00:00Z
 
 constraints:
   -- For GHC 9.4, older versions of entropy fail to build on Windows
@@ -68,7 +117,9 @@ constraints:
   stylish-haskell +ghc-lib,
   fourmolu -fixity-th,
   -- http2 doesn't build with -haddock on ghc-8.10
-  http2 < 4.0.0
+  http2 < 4.0.0,
+  setup.happy == 1.20.1.1,
+  happy == 1.20.1.1
 
 -- This is benign and won't affect our ability to release to Hackage,
 -- because we only depend on `ekg-json` when a non-default flag
@@ -81,7 +132,6 @@ source-repository-package
   type:git
   location: https://github.com/pepeiborra/ekg-json
   tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
-  -- https://github.com/tibbe/ekg-json/pull/12
 -- END DELETE
 
 allow-newer:
@@ -107,3 +157,15 @@ allow-newer:
   uuid:time,
   vector-space:base,
   ekg-wai:time,
+
+if impl(ghc >= 9.5)
+  repository head.hackage.ghc.haskell.org
+     url: https://ghc.gitlab.haskell.org/head.hackage/
+     secure: True
+     key-threshold: 3
+     root-keys:
+         f76d08be13e9a61a377a85e2fb63f4c5435d40f8feb3e12eb05905edb8cdea89
+         26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
+         7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
+
+  active-repositories: hackage.haskell.org, head.hackage.ghc.haskell.org:override
