Experiment with loading matrix values from a file
The goal here is to avoid duplication of e.g. which versions of GHC we
support.

This is an experiment at the moment.

--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -18,8 +18,13 @@ jobs:
   pre_job:
     runs-on: ubuntu-latest
     outputs:
+      ghcs: ${{ steps.ghcs.outputs.ghcs }}
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
+      # Need the repo checked out in order to read the file
+      - uses: actions/checkout@v3
+      - id: ghcs
+        run: echo "ghcs=$(cat ./.github/workflows/supported-ghc-versions.json)" >> $GITHUB_OUTPUT
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@v5.3.0
         with:
@@ -44,12 +49,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        ghc: [ "9.2.5"
-             , "9.0.2"
-             , "8.10.7"
-             ]
-        os: [ "ubuntu-latest"
-            ]
+        ghc: ${{ fromJSON(needs.pre_job.outputs.ghcs) }}
+        os:
+          - ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
