--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -46,8 +46,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.10.7', '9.2.5']
-        os: [ubuntu-latest]
+        ghc:
+          - '8.10.7'
+          - '9.2.5'
+        os:
+          - ubuntu-latest
 
     # This code is fitted to the strategy: assumes Linux is used ... etc,
     # change of the strategy may require changing the bootstrapping/run code
