--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -23,6 +23,14 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Workaround runner image issue
+      if: runner.os == 'Linux'
+      # https://github.com/actions/runner-images/issues/7061
+      run: | 
+        sudo mkdir -p /usr/local/.ghcup
+        sudo chown -R $USER /usr/local/.ghcup
+      shell: bash
+
     - uses: haskell/actions/setup@v2.3.3
       id: HaskEnvSetup
       with:
