--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -290,7 +290,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ["9.4.4", "9.2.6", "9.2.5", "9.0.2", "8.10.7"]
+        ghc: ["9.4.4", "9.2.5", "9.0.2", "8.10.7"]
     steps:
       - name: install windows deps
         shell: pwsh
