Regularise the building and testing of packages
This moves the specificaiton of which packages we have and which
versions of GHC they don't support to a data file, which we can then use
to select the packages to build programmatically, rather than having an
explicit listing of steps in the workflow file.

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -27,15 +27,13 @@ jobs:
           paths_ignore: '[ "**/docs/**"
                          , "**.md"
                          , "**/LICENSE"
-                         , ".circleci/**"
                          , "**.nix"
-                         , "**/test/**"
                          , "flake.lock"
-                         , "**/README.md"
-                         , "FUNDING.yml"
-                         , "**/stack*.yaml"
-                         , ".gitlab-ci.yaml"
+                         , "**.yml"
+                         , "**.yaml"
+                         , ".circleci/**"
                          , ".gitlab/**"
+                         , ".github/**"
                          ]'
 
   bench_init:
