--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -7,7 +7,7 @@ inputs:
   cabal:
     description: "Cabal version"
     required: false
-    default: "3.8.1.0"
+    default: "3.10"
   os:
     description: "Operating system: Linux, Windows or macOS"
     required: true
@@ -57,11 +57,9 @@ runs:
     - if: inputs.shorten-hls == 'true'
       name: Workaround shorten binary names
       run: |
-        sed -i.bak -e 's/haskell-language-server/hls/g' \
-                    -e 's/haskell_language_server/hls/g' \
+        sed -i.bak -e 's/executable haskell-language-server/executable hls/g' \
+                    -e 's/haskell-language-server:haskell-language-server/haskell-language-server:hls/g' \
                     haskell-language-server.cabal cabal.project
-        sed -i.bak -e 's/Paths_haskell_language_server/Paths_hls/g' \
-                    src/**/*.hs exe/*.hs
       shell: bash
 
     - name: Retrieving `cabal.project` Hackage timestamp
