--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -31,13 +31,22 @@ runs:
         sudo chown -R $USER /usr/local/.ghcup
       shell: bash
 
-    - uses: haskell/actions/setup@v2.3.3
+    - if: inputs.os != 'Windows'
+      uses: haskell/actions/setup@v2.3.3
       id: HaskEnvSetup
       with:
         ghc-version  : ${{ inputs.ghc   }}
         cabal-version: ${{ inputs.cabal }}
         enable-stack: false
         ghcup-release-channel: "https://raw.githubusercontent.com/haskell/ghcup-metadata/b9fd40eef5a6409a0742a5a248cda0cc24510d45/ghcup-prereleases-0.0.7.yaml"
+
+    - if: inputs.os == 'Windows'
+      uses: haskell/actions/setup@v2.3.3
+      id: HaskEnvSetupWin
+      with:
+        ghc-version  : ${{ inputs.ghc   }}
+        cabal-version: ${{ inputs.cabal }}
+        enable-stack: false
 
     - if: inputs.os == 'Windows'
       name: (Windows) Platform config
