--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -31,22 +31,13 @@ runs:
         sudo chown -R $USER /usr/local/.ghcup
       shell: bash
 
-    - if: inputs.os != 'Windows'
-      uses: haskell/actions/setup@v2.3.3
+    - uses: wz1000/actions/setup@523dc3be401481fd8afdc04882eab7144848de3e
       id: HaskEnvSetup
       with:
         ghc-version  : ${{ inputs.ghc   }}
         cabal-version: ${{ inputs.cabal }}
         enable-stack: false
         ghcup-release-channel: "https://raw.githubusercontent.com/haskell/ghcup-metadata/b9fd40eef5a6409a0742a5a248cda0cc24510d45/ghcup-prereleases-0.0.7.yaml"
-
-    - if: inputs.os == 'Windows'
-      uses: haskell/actions/setup@v2.3.3
-      id: HaskEnvSetupWin
-      with:
-        ghc-version  : ${{ inputs.ghc   }}
-        cabal-version: ${{ inputs.cabal }}
-        enable-stack: false
 
     - if: inputs.os == 'Windows'
       name: (Windows) Platform config
