--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -34,7 +34,7 @@ library
     , fourmolu        ^>=0.3 || ^>=0.4 || ^>= 0.6 || ^>= 0.7 || ^>= 0.8 || ^>= 0.9 || ^>= 0.10
     , ghc
     , ghc-boot-th
-    , ghcide          ^>=1.8.0.2 || ^>= 1.9
+    , ghcide          ^>= 1.9
     , hls-plugin-api  ^>=1.5 || ^>= 1.6
     , lens
     , lsp
