--- a/cabal.project
+++ b/cabal.project
@@ -125,6 +125,10 @@ constraints:
 -- centos7 has an old version of git which cabal doesn't
 -- support. We delete these lines in gitlab ci to workaround
 -- this issue, as this is not necessary to build our binaries.
+source-repository-package
+  type:git
+  location: https://github.com/pepeiborra/ekg-json
+  tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
 -- END DELETE
 
 allow-newer:
