--- a/cabal.project
+++ b/cabal.project
@@ -88,6 +88,7 @@ if impl(ghc >= 9.5)
   allow-newer:
     -- ghc-9.6
     template-haskell,
+    unordered-containers:template-haskell,
     base,
     ghc-prim,
     ghc,
