--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -103,7 +103,7 @@ library
         ghc-check >=0.5.0.8,
         ghc-paths,
         cryptohash-sha1 >=0.11.100 && <0.12,
-        hie-bios ^>= 0.11.0,
+        hie-bios == 0.12.0,
         -- implicit-hie 0.1.3.0 introduced an unexpected behavioral change.
         -- https://github.com/Avi-D-coder/implicit-hie/issues/50
         -- to make sure ghcide behaves in a desirable way, we put implicit-hie
