GHC 9.6 with nix
This commit setups the requirement for nix build with ghc 9.6:

- Changes the flake.nix lib to create the ghc96 entries
- Create configuration-ghc-96.nix with the required overrides
- A few haskell files are changed to take into account changes in
  `hie-bios` related to logging, see https://github.com/haskell/hie-bios/pull/375/files#diff-58ae540d147057c94682a01b61de564caf1eb641fac8d2a3f29ea1f29d673ac4

  I've introduced a `voidLog` value which does not log anything. This
  must be fixed to instead use a sanner approach.

- Disable a few plugins which are not building because of `retrie`

This allows me to build and run GHC 9.6 with nix on my project.

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -41,6 +41,7 @@ common common-deps
     , filepath
     , text
     , prettyprinter
+    , co-log-core
 
 -- Default warnings in HLS
 common warnings
