--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,12 +88,7 @@ jobs:
           os:  ${{ runner.os }}
 
       - name: Build
-        run: |
-          echo "PATH:    ${PATH}"
-          which ghc
-          ghc --version
-          ghcup list
-          cabal build
+        run: cabal build
 
       - name: Set test options
         # run the tests without parallelism, otherwise tasty will attempt to run
